--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.0'
+	implementation 'org.springframework:spring-web:5.3.20'
+	implementation 'org.springframework:spring-webmvc:5.3.20'
+	implementation 'org.springframework.boot:spring-boot-starter-tomcat:2.7.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
